--- a/example1.yml
+++ b/example1.yml
@@ -9,11 +9,12 @@ pipelines:
     configuration:
       inputResources:
         - name: S_WF_012_resource
-      outputResources:
-        - name: S_WF_012_resource  
     steps:
       - name: S_WF_012_input1
         type: Bash
+        configuration:
+          outputResources:
+            - name: S_WF_012_resource        
         execution:
           onExecute:
             #- write_output S_WF_012_resource runNumber=${run_number}
