--- a/example1.yml
+++ b/example1.yml
@@ -1,46 +1,52 @@
 resources:
-  - name: S_WF_012_resource
+  - name: S_WF_010_resource1
     type: PropertyBag
     configuration:
       runNumber: 0
-     
-  - name: S_WF_012_resource2
+  - name: S_WF_010_resource2
     type: PropertyBag
     configuration:
-      runNumber: 0     
+      runNumber: 0
 
 pipelines:
-  - name: pipeline_S_WF_012_001
+  - name: pipeline_S_WF_010
     configuration:
-      inputResources:
-        - name: S_WF_012_resource
+      outputResources:
+        - name: S_WF_010_resource2  
     steps:
-      - name: S_WF_012_input1
+      - name: S_WF_010_trigger
+        type: Bash
+        execution:
+          onExecute:
+            - echo "test"
+      - name: S_WF_010_input1
         type: Bash
         configuration:
-          outputResources:
-            - name: S_WF_012_resource2        
+          inputSteps:
+            - name: S_WF_010_trigger
+          #outputResources:
+            #- name: S_WF_010_resource1
         execution:
           onExecute:
-            #- write_output S_WF_012_resource runNumber=${run_number}
-            - echo "test"
-      - name: S_WF_012_step1
-        type: Bash
-        execution:
-          onExecute:
-            - echo "test"
-      - name: S_WF_012_step2
-        type: Bash
-        execution:
-          onExecute:
-            - echo "test"
-  - name: pipeline_S_WF_012_002
-    steps:
-      - name: S_WF_012_002
+            - write_output S_WF_010_resource1 runNumber=${run_number}
+      - name: S_WF_010_input2
         type: Bash
         configuration:
-          outputResources:
-            - name: S_WF_012_resource
+          inputSteps:
+            - name: S_WF_010_trigger
+          #outputResources:
+            #- name: S_WF_010_resource2
         execution:
           onExecute:
-            - write_output S_WF_012_resource runNumber=${run_number}
+            - echo "test"
+      - name: S_WF_010
+        type: Bash
+        configuration:
+          inputResources:
+            - name: S_WF_010_resource1
+              newVersionOnly: true
+            - name: S_WF_010_resource2
+              newVersionOnly: true
+        execution:
+          onExecute:
+            - echo "test"
