--- a/example2.yml
+++ b/example2.yml
@@ -25,3 +25,6 @@ pipelines:
                 - value3
               allowCustom: true
             step_env2: value2 
+        execution:
+          onExecute:
+            - echo "test"
