--- a/example3.yml
+++ b/example3.yml
@@ -24,6 +24,10 @@ pipelines:
           environmentVariables:
             MY_KEY: '"Hello - World"'
             MY_NEW_KEY: '"Another key - Value"'
+            values:
+                - value1
+                - value2
+                - value3
         execution:
           onExecute:
             - echo $MY_MESSAGE
