--- a/example3.yml
+++ b/example3.yml
@@ -24,10 +24,13 @@ pipelines:
           environmentVariables:
             MY_KEY: '"Hello - World"'
             MY_NEW_KEY: '"Another key - Value"'
-            values:
-              - value1
-              - value2
-              - value3
+            step_env1:
+              default: value1
+              description: step env1 description
+              values:
+                - value1
+                - value2
+                - value3
         execution:
           onExecute:
             - echo $MY_MESSAGE
